# 275_mini1

./: .gitignore  CMakeLists.txt  CmakeLists.txt  MotorVehicleCollisionData_subset.csv  README.md  collision.cpp  collision.hpp  collision_manager.cpp  collision_manager.hpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  collision_parser.cpp  collision_parser.hpp  main.cpp  parser.cpp  query.cpp  query.hpp
phase_1/: collision.hpp  collision_manager.hpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  main.cpp  query.hpp
phase_2/: CMakeLists.txt  collision_manager.cpp  collision_manager.hpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  main.cpp
phase_3.1/: CMakeLists.txt  collision.cpp  collision.hpp  collision_manager.cpp  collision_manager.hpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  collision_parser.cpp  collision_parser_benchmark.cpp  main.cpp  query.cpp
phase_3.2/: collision_manager.cpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  main.cpp
phase_3.3/: collision.cpp  collision.hpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  main.cpp
phase_3.4/: collision_field_enum.hpp  collision_manager.cpp  collision_manager_benchmark.cpp  query.cpp
phase_3.5/: collision.cpp  collision.hpp  collision_manager.cpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  query.hpp
phase_3.6/: collision.cpp  collision.hpp  collision_manager.hpp  collision_manager_benchmark.cpp  collision_manager_test.cpp
phase_3.7/: collision.cpp  collision.hpp  collision_manager_benchmark.cpp
phase_3.8/: CMakeLists.txt  collision_manager.cpp
phase_3.9/: collision.cpp  collision_manager_benchmark.cpp
phase_3_BoroughQueryOptimize/phase3.1/: CMakeLists.txt  collision.cpp  collision.hpp  collision_manager.cpp  collision_manager.hpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  collision_parser.cpp  main.cpp
phase_3_BoroughQueryOptimize/phase_3.6/: collision.hpp  collision_manager.cpp  collision_manager.hpp  collision_manager_benchmark.cpp  main.cpp
